--- a/ding-contacts/pom.xml
+++ b/ding-contacts/pom.xml
@@ -15,11 +15,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.ssp.ding</groupId>
-            <artifactId>ding-contacts-api</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.taobao</groupId>
             <artifactId>taobao-sdk-java</artifactId>
             <version>1.0.0-SNAPSHOT</version>
@@ -27,14 +22,18 @@
             <optional>true</optional>
             <systemPath>${project.basedir}/../lib/taobao-sdk-java-auto_1479188381469-20200617.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>com.ssp.ding</groupId>
+            <artifactId>ding-contacts-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.ssp.ding</groupId>
             <artifactId>ding-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <optional>true</optional>
+            <groupId>com.ssp.ding</groupId>
+            <artifactId>ding-callback</artifactId>
         </dependency>
     </dependencies>
 
