--- a/ding-spring-boot-starters/pom.xml
+++ b/ding-spring-boot-starters/pom.xml
@@ -17,6 +17,7 @@
         <module>ding-contacts-spring-boot-starter</module>
         <module>ding-core-spring-boot-starter</module>
         <module>ding-callback-spring-boot-starter</module>
+        <module>ding-message-spring-boot-starter</module>
     </modules>
 
     <dependencies>
