--- a/ding-core/pom.xml
+++ b/ding-core/pom.xml
@@ -53,5 +53,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.10.4</version>
+        </dependency>
     </dependencies>
 </project>
