--- a/ding-spring-boot-starters/ding-contacts-spring-boot-starter/src/test/resources/application.yml
+++ b/ding-spring-boot-starters/ding-contacts-spring-boot-starter/src/test/resources/application.yml
@@ -4,6 +4,7 @@ ding:
   app-secret: swBbAaDkPyCNrVAApTr5evMfrrkRcTyKpbrNlz_L_zUjJlpk-WgQzg1CkSVLTQzg
   callback:
     enabled: false
+  storage-type: redis
 logging:
   level:
     com.ssp.ding: debug
