--- a/ding-attendance-api/pom.xml
+++ b/ding-attendance-api/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-api</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
