--- a/ding-callback/pom.xml
+++ b/ding-callback/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-api</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,23 +16,18 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.taobao</groupId>
-            <artifactId>taobao-sdk-java</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <optional>true</optional>
-            <systemPath>${project.basedir}/../lib/taobao-sdk-java-auto_1479188381469-20200813.jar</systemPath>
-        </dependency>
-
-        <dependency>
             <groupId>com.taobao.top</groupId>
             <artifactId>lippi-oapi-encrpt</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
             <optional>true</optional>
-            <systemPath>${project.basedir}/../lib/lippi-oapi-encrpt.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>com.taobao</groupId>
+            <artifactId>taobao-sdk-java</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
