--- a/ding-core/pom.xml
+++ b/ding-core/pom.xml
@@ -6,6 +6,7 @@
         <groupId>com.ssp.ding</groupId>
         <artifactId>ding-api</artifactId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,14 +18,6 @@
         <dependency>
             <groupId>com.ssp.ding</groupId>
             <artifactId>ding-core-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.taobao</groupId>
-            <artifactId>taobao-sdk-java</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <optional>true</optional>
-            <systemPath>${project.basedir}/../lib/taobao-sdk-java-auto_1479188381469-20200813.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -57,6 +50,13 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>3.10.4</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.taobao</groupId>
+            <artifactId>taobao-sdk-java</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
