--- a/ding-message/pom.xml
+++ b/ding-message/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-api</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,9 +24,7 @@
             <groupId>com.taobao</groupId>
             <artifactId>taobao-sdk-java</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
             <optional>true</optional>
-            <systemPath>${project.basedir}/../lib/taobao-sdk-java-auto_1479188381469-20200813.jar</systemPath>
         </dependency>
 
         <dependency>
