--- a/ding-spring-boot-starters/ding-callback-spring-boot-starter/pom.xml
+++ b/ding-spring-boot-starters/ding-callback-spring-boot-starter/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-spring-boot-starters</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,5 +23,12 @@
             <groupId>com.ssp.ding</groupId>
             <artifactId>ding-core-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.taobao.top</groupId>
+            <artifactId>lippi-oapi-encrpt</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 </project>
