--- a/ding-spring-boot-starters/ding-contacts-spring-boot-starter/pom.xml
+++ b/ding-spring-boot-starters/ding-contacts-spring-boot-starter/pom.xml
@@ -26,25 +26,13 @@
             <groupId>com.ssp.ding</groupId>
             <artifactId>ding-core-spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.taobao</groupId>
-            <artifactId>taobao-sdk-java</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <optional>true</optional>
-            <systemPath>${project.basedir}/../../lib/taobao-sdk-java-auto_1479188381469-20200813.jar</systemPath>
-        </dependency>
 
         <dependency>
-            <groupId>com.taobao.top</groupId>
-            <artifactId>lippi-oapi-encrpt</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>2.13.0</version>
             <optional>true</optional>
-            <systemPath>${project.basedir}/../../lib/lippi-oapi-encrpt.jar</systemPath>
         </dependency>
-
-
     </dependencies>
 
 </project>
