--- a/ding-spring-boot-starters/ding-core-spring-boot-starter/pom.xml
+++ b/ding-spring-boot-starters/ding-core-spring-boot-starter/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-spring-boot-starters</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,6 +17,12 @@
         <dependency>
             <groupId>com.ssp.ding</groupId>
             <artifactId>ding-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>2.13.0</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
