--- a/ding-spring-boot-starters/ding-message-spring-boot-starter/pom.xml
+++ b/ding-spring-boot-starters/ding-message-spring-boot-starter/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>ding-spring-boot-starters</artifactId>
         <groupId>com.ssp.ding</groupId>
         <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,9 +18,7 @@
             <groupId>com.taobao</groupId>
             <artifactId>taobao-sdk-java</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
             <optional>true</optional>
-            <systemPath>${project.basedir}/../../lib/taobao-sdk-java-auto_1479188381469-20200813.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.ssp.ding</groupId>
